--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -7,3 +7,4 @@
     - role: geerlingguy.mac.homebrew
     - role: geerlingguy.mac.mas
     # - role: geerlingguy.mac.dock # https://github.com/kcrawford/dockutil/issues/127
+    - role: dotfiles
