--- a/.taskfiles/format.yml
+++ b/.taskfiles/format.yml
@@ -5,6 +5,7 @@ tasks:
   all:
     - task: markdown
     - task: yaml
+    - task: json
   markdown:
     desc: Format Markdown
     cmds:
@@ -30,4 +31,17 @@ tasks:
         --parser=yaml
         --write '*.y*ml'
         '**/*.y*ml'
+    ignore_error: true
+  json:
+    desc: Format JSON
+    cmds:
+      - >-
+        prettier
+        --ignore-path '.github/linters/.prettierignore'
+        --config
+        '.github/linters/.prettierrc.yaml'
+        --list-different
+        --ignore-unknown
+        --parser=json
+        --write '*.json' '**/*.json'
     ignore_error: true
