ci: streamline ansible lint with other linters

--- a/.taskfiles/lint.yml
+++ b/.taskfiles/lint.yml
@@ -24,6 +24,7 @@ tasks:
     desc: Lint ansible
     cmds:
       - ansible-lint -c '.github/linters/.ansible-lint' .
+    ignore_errors: true
 
   format:
     desc: Lint general formatting
