--- a/group_vars/local.yml
+++ b/group_vars/local.yml
@@ -132,3 +132,4 @@ vscode_extentions:
   - redhat.vscode-yaml
   - shardulm94.trailing-spaces
   - zhuangtongfa.material-theme
+  - hashicorp.terraform
