feat: add packages for infra repo to brew install list

--- a/group_vars/local.yml
+++ b/group_vars/local.yml
@@ -24,6 +24,9 @@ homebrew_installed_packages:
   - kubectl
   - clusterctl
   - flux
+  - helm
+  - ipcalc
+  - jq
 
 homebrew_cask_apps:
   - authy
